--- a/templates/index.html
+++ b/templates/index.html
@@ -10,9 +10,9 @@
 <body>
     <!-- Шапка страницы -->
     <header class="header">
-        <h1>Веб ЛР1</h1>
+        <h1><i>Веб ЛР1</i></h1>
         <div class="student-info">
-            ФИО: Ожеховский Александр Сергеевич | Группа: P3231 | Вариант: 466944
+            <i>ФИО: Ожеховский Александр Сергеевич | Группа: P3231 | Вариант: 466944</i>
         </div>
     </header>
 
